--- a/delivery.html
+++ b/delivery.html
@@ -96,12 +96,39 @@ body{margin:0;background:#eef2f7}
 }
 
 /* STATUS BOX */
-.status-box{
-  padding:6px 12px;
-  border-radius:12px;
-  display:inline-block;
-  font-size:13px;
-  margin-bottom:10px;
+/* STATUS BOX FIXED */
+.status-box {
+  display: inline-block;       /* inline to shrink to content */
+  padding: 4px 10px;           /* less padding to make compact */
+  border-radius: 12px;
+  font-size: 12px;             /* slightly smaller font */
+  font-weight: 500;
+  margin-bottom: 8px;
+  white-space: nowrap;         /* prevent wrapping */
+  text-overflow: ellipsis;     /* ... if too long */
+  overflow: hidden;
+  vertical-align: middle;
+}
+
+/* COLORS */
+.status-pending{
+  background:#fef3c7;
+  color:#b45309;
+}
+
+.status-assigned{
+  background:#bfdbfe;
+  color:#1e40af;
+}
+
+.status-delivered{
+  background:#dcfce7;
+  color:#166534;
+}
+
+.status-default{
+  background:#e5e7eb;
+  color:#374151;
 }
 
 /* STATUS COLORS */
