--- a/delivery.html
+++ b/delivery.html
@@ -11,22 +11,28 @@
   margin: 0;
   padding: 0;
 }
-
+.main{
+  max-width: 900px;
+  margin: 16px auto;     /* 🔥 top space mil jayega */
+  padding: 12px;
+}
 body {
   background: #f3f6fb;   /* soft background */
   color: #1f2937;         /* main text color */
 }
 
 /* ===================== TOP BAR ===================== */
-.top {
-  background: #0f172a;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 14px 20px;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+.top{
+  background:#0f172a;
+  color:#fff;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+
+  padding:16px 20px;    /* thoda comfortable */
+  border-radius:16px;
+
+  margin-bottom:14px;  /* 🔥 neeche gap */
 }
 
 .top h3 {
