--- a/delivery.html
+++ b/delivery.html
@@ -59,16 +59,16 @@ body {
 /* ===================== CARD BASE ===================== */
 .card {
   background: #fff;
-  margin-top: 16px;
-  padding: 16px;
-  border-radius: 14px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
 
 .card.order {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gapqp: 10px;
 }
 
 /* ===================== ORDER IMAGE ===================== */
