--- a/delivery.html
+++ b/delivery.html
@@ -81,22 +81,22 @@ body {
 }
 
 /* ===================== STATUS BOX ===================== */
-/* ===== COMPACT STATUS BOX ===== */
+/* ===== ULTRA COMPACT STATUS CHIP ===== */
 .status-box{
-  display:inline-flex;          /* pill jaisa */
+  display:inline-flex;
   align-items:center;
-  gap:6px;
 
-  padding:3px 8px;              /* 🔥 chhota size */
-  border-radius:999px;          /* fully rounded pill */
+  padding:2px 6px;        /* 🔥 aur kam */
+  border-radius:999px;
 
-  font-size:11px;               /* compact text */
+  font-size:10.5px;       /* 🔥 smaller text */
   font-weight:600;
 
-  line-height:1;                /* extra height remove */
+  line-height:1;          /* height control */
   white-space:nowrap;
 
-  max-width:100%;
+  width:auto;
+  max-width:max-content;  /* 🔥 sirf text jitna */
 }
 
 .status-pending {
