--- a/delivery.html
+++ b/delivery.html
@@ -21,7 +21,8 @@ body{
 .main{
   max-width:900px;
   margin:auto;
-  padding:14px;   /* 🔥 top issue fix */
+  padding:14px; 
+  padding-top: 160px;/* 🔥 top issue fix */
 }
 
 /* ===================== TOP BAR ===================== */
