--- a/delivery.html
+++ b/delivery.html
@@ -156,12 +156,18 @@ body{
 /* ===================== MODAL ===================== */
 .modal{
   position:fixed;
-  inset:0;
+  top:160px;                 /* 🔥 header + active card height */
+  left:0;
+  right:0;
+  bottom:0;
+
   background:rgba(0,0,0,.45);
   display:none;
-  align-items:center;
+  align-items:flex-start;    /* center nahi */
   justify-content:center;
-  z-index:20;
+
+  overflow-y:auto;
+  z-index:200;               /* 🔥 sabse upar */
 }
 
 /* 🔥 COMPACT POPUP */
@@ -172,6 +178,7 @@ body{
   border-radius:14px;
   padding:14px;
   box-shadow:0 6px 20px rgba(0,0,0,.2);
+  margin-top:12px;
 }
 
 .modal-box h3{
