--- a/delivery.html
+++ b/delivery.html
@@ -86,7 +86,7 @@ body{
   gap:14px;
   margin-bottom:16px;   /* 👈 cards ke beech gap */
   padding:14px;
-  background:#fff;
+  background: #eff6ff;
   border-radius:14px;
   box-shadow:0 4px 14px rgba(0,0,0,.06);
 }
