--- a/delivery.html
+++ b/delivery.html
@@ -68,7 +68,7 @@ body{
   width: calc(100% - 24px);
   max-width: 900px;
 
-  background:#2563eb;
+  background:#0f172a;
   padding:10px 14px;
   border-radius:14px;
 
