--- a/delivery.html
+++ b/delivery.html
@@ -61,19 +61,17 @@ body{
 }
 .active-card{
   position: fixed;
-  top: 86px;                 /* top bar ke niche */
+  top: 86px;
   left: 50%;
   transform: translateX(-50%);
-
   width: calc(100% - 24px);
   max-width: 900px;
-
   background:#0f172a;
   padding:10px 14px;
   border-radius:14px;
-
   box-shadow:0 4px 14px rgba(0,0,0,.08);
   z-index:90;
+  color:#fff; /* 🔥 MAIN FIX */
 }
 
 
